--- a/settings.yaml
+++ b/settings.yaml
@@ -1,9 +1,8 @@
 # directories
 data_path: '...'
-save_dir: '...'
-save_dir_metrics: '...'
 load_ckpt_filepath : '...' 
 store_ckpt_path: '...'
+results_path: '...'
 
 
 # general settings
@@ -11,6 +10,7 @@ verbose: False
 show_training: True
 seed: 42
 device: cuda
+verbose: True
 
 
 # data settings
